# E-IMZO-ATB-Client

./: .env.example  .gitignore  README.md  eimzo-atb-client.spec  pyproject.toml  requirements.txt
.github/workflows/: build-exe.yml
.venv-build/: pyvenv.cfg
.venv-build/Scripts/: activate  activate.bat
src/client/: __init__.py  __main__.py  app.py  main.py
src/client/bootstrap/: config.py  dotenv.py  logging.py  settings.py  ssl_hardening.py
src/client/domain/: certificate_filter.py  commands.py  key_identity_store.py
src/client/integrations/: eimzo_api.py
src/client/system/: __init__.py  account.py  app_icon.py  autostart.py  certificates.py  eimzo_process.py  single_instance.py  tray_icon.py  updates.py
src/client/transport/websocket/: __init__.py  messages.py  server.py
src/client/ui/: __init__.py  prompts.py
